--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -30,6 +30,9 @@
             <a href="/crm-implement.html">
                 <li class="dropdown-submenu-item">Битрикс24.CRM</li>
             </a>
+            <a href="/amocrm.html">
+                <li class="dropdown-submenu-item">amoCRM</li>
+            </a>
             <a href="">
                 <li class="dropdown-submenu-item">Анализ и оптимизация бизнесс-процессов</li>
             </a>
