Analysis: added styles in this page, but without buttons

--- a/src/analysis.html
+++ b/src/analysis.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('html/all-pages/head.html',{
-"title": "amoCRM",
-"linkCSS": "css/amocrm.min.css"
+"title": "Анализ и оптимизация бизнес-процессов",
+"linkCSS": "css/analysis.min.css"
 })
 <body>
+
 <svg class="svg-sprites" xmlns="http://www.w3.org/2000/svg">
     <symbol id="arrowBread" viewBox="0 0 8 8">
         <path d="M4.14645 0.646447C4.34171 0.451184 4.65829 0.451184 4.85355 0.646447L7.85355 3.64645C7.94732 3.74022 8 3.86739 8 4C8 4.13261 7.94732 4.25979 7.85355 4.35355L4.85355 7.35355C4.65829 7.54882 4.34171 7.54882 4.14645 7.35355C3.95118 7.15829 3.95118 6.84171 4.14645 6.64645L6.29289 4.5L0.5 4.5C0.223858 4.5 0 4.27614 0 4C0 3.72386 0.223858 3.5 0.5 3.5L6.29289 3.5L4.14645 1.35355C3.95118 1.15829 3.95118 0.841709 4.14645 0.646447Z" fill="#BBBBBB"/>
@@ -49,8 +50,7 @@
 @@include('html/all-pages/header.html',{})
 
 <main>
-
-    <section class="amocrm">
+    <section class="analysis">
 
         <div class="page-breadcrumbs">
             <div class="container">
@@ -62,11 +62,11 @@
                 <svg class="svg-arrowBread">
                     <use href="#arrowBread"/>
                 </svg>
-                <span class="page-breadcrumbs-text">amoCRM</span>
+                <span class="page-breadcrumbs-text">Анализ и оптимизация бизнес-процессов</span>
             </div>
         </div>
 
-        <p class="page-title container">amoCRM</p>
+        <p class="page-title container">Анализ и оптимизация бизнес-процессов</p>
 
         <div class="page-header">
             <button class="page-blueBtn">Нужна консультация
@@ -76,132 +76,164 @@
             </button>
         </div>
 
-        <div class="amocrm-description container">
-            <p class="amocrm-description-text">Отличное решение для автоматизации вашего отдела продаж, который позволит не потерять ни одной заявки и мгновенно реагировать на них. Время – главный фактор качества общения с клиентами. Если вы отвечаете пользователю в течение 30 минут, то вы неплохо справляетесь, а если через неделю, то есть над чем работать.</p>
-            <p class="amocrm-description-text">Исследования показывают положительную корреляцию между быстрым временем отклика и высоким уровнем удовлетворенности. По данным Forrester Research, 77% клиентов говорят, что экономия их времени — это самый важный фактор хорошего обслуживания в Интернете. С помощью amoCRM можно не только быстро реагировать на поступающие заявки, но и наладить связь с клиентом, максимально упростить его путь, сделав его быстрым, четким и простым.</p>
-        </div>
+        <div class="analysis-description container">Сертифицированные бизнес-разработчики проведут подробный бизнес-анализ вашей организации, найдут пути улучшения и соберут статистику по выполнению бизнес-процессов. В процессе решения задач бизнес анализа специалисты компании применяют методики мозгового штурма, сопоставительного анализа и интервьюирования, моделируют данные и процессы, выполняют анализ рисков, коренных причин и требований.</div>
 
-        <hr/>
+        <div class="analysis-modeling">
+            <div class="analysis-modeling-cont container">
+                <div class="modeling-block-text">
+                    <p class="analysis-modeling-title">Анализ</p>
+                    <p class="analysis-modeling-text">предметной области и бизнес‒ моделирование:</p>
+                </div>
 
-        <div class="page-list-block">
-            <div class="page-list-block-block container">
-                <div class="page-list-block-cont">
-                    <p class="page-list-blueTitle">Почему amoCRM?</p>
-                    <p class="page-list-title">Консультации по Битрикс24 и AmoCRM, помощь в настройке портала</p>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Анализируем, консультируем и даем рекомендации по использованию инструментов Битрикс24 и amoCRM в Вашем портале;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Любые вопросы по настройке инструментов Битрикс24 и amoCRM и использованию портала</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Консультируем по версиям Битрикс24 и amoCRM;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настраиваем инструменты Битрикс24 и amoCRM по запросу.</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Помощь в настройке роботов автоматизации</span>
-                    </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Установление коммуникации с клиентом.</button>
+                    <div class="modeling-btn-svg">
 
-                    <p class="page-list-title">Администрирование и настройка вашего сервера</p>
-
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настройка сервера под требования коробочной версии Битрикс24 и amoCRM без проблем и ошибок;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Настройка резервного копирования;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Регулярные проверки и мониторинг;</span>
-                    </div>
-                    <div class="page-list-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <span class="page-list-text">Миграция из облака в коробку и т.д.</span>
                     </div>
                 </div>
-                <div class="page-list-block-div"></div>
-            </div>
-<!--            <img src="img/amocrm/girl-amocrm.png" alt="girl_amoCRM"/>-->
-        </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Детальный анализ предметной области.</button>
+                    <div class="modeling-btn-svg">
 
+                    </div>
+                </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Разработка терминологического глоссария.</button>
+                    <div class="modeling-btn-svg">
 
-        <div class="page-list-block-bgd">
-            <div class="page-list-block-bonuses container">
-                <p class="page-list-title-bonuses">Бонусы</p>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Введение и обучение сотрудников после внедрения</span>
+                    </div>
                 </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">После внедрения вы получаете бесплатно 1 месяц технической поддержки и сопровождения</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Настройка одной воронки продаж</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Оптимизируем все процессы и взаимодействие сотрудников отделов между собой</span>
-                </div>
-                <div class="page-list-item">
-                    <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                    <span class="page-list-text">Проведем автоматизацию системы</span>
-                </div>
-            </div>
-        </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Речение задач по изучению, моделированию и оптимизации бизнес-процессов.</button>
+                    <div class="modeling-btn-svg">
 
+                    </div>
+                </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Определение, анализ и классификация заинтересованных лиц.</button>
+                    <div class="modeling-btn-svg">
 
-            <div class="page-pros container">
-                <p class="page-pros-title">Плюсы работы с нами</p>
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Опыт более 12 лет</p>
-                    <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+                    </div>
                 </div>
-                <div class="page-pros-item">
-                    <svg class="svg-qualification"  width="40" height="28">
-                        <use href="#qualification"/>
-                    </svg>
-                    <p class="pros-item-header">Квалификация сотрудников</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-start">Создание модели, описывающей ключевых участников.</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
                 </div>
-                <div class="page-pros-item">
-                    <svg class="svg-transparency" width="42" height="30">
-                        <use href="#transparency"/>
-                    </svg>
-                    <p class="pros-item-header">Максимальная прозрачность</p>
-                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-center">Выявление иерархии всех уровней и целей решаемой програмной задачи.</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
                 </div>
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                    <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-end">Разработка кратких сценариев для каждого программного сервиса решения.</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
                 </div>
-                <div class="page-pros-item">
-                    <svg class="svg-complex" width="38" height="40">
-                        <use href="#complex"/>
-                    </svg>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-end">Отработка генеральной концепции программной среды (Vision).</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
+                </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-end">Решение задач, связанных с определением и согласованием границ разработки.</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
+                </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-end">Создание модели функциональных требований к пользователям системы.</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
+                </div>
+                <div class="modeling-block-btn">
+                    <button class="modeling-btn-text-end">Подготовка спецификации требований разрабатываемого ПО (составление SRS).</button>
+                    <div class="modeling-btn-svg">
+
+                    </div>
                 </div>
             </div>
+        </div>
+
+        <div class="analysis-useCase">
+            <div class="analysis-useCase-cont container">
+                <p class="analysis-useCase-title">Анализ требований с построением Use Case модели:</p>
+                <div class="analysis-useCase-block">
+                    <div class="analysis-useCase-block-1">
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Выявляют функции программной системы, которые отвечают за бизнес-логику и обеспечивают трассируемость функциональных требований.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Детально описывают потоки событий в каждом из сценариев бизнес-логики.</span>
+                        </div>
+                    </div>
+                    <div class="analysis-useCase-block-1">
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Выстраивают Use Case-модель программной системы.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Используя инструменты прототипирования Axsure и Balsaminq, создают эффективные прототипы экранных форм.</span>
+                        </div>
+                        <div class="page-list-item">
+                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+                            <span class="page-list-text">Проверяют сценарии и прототипы экранных форм на соответствие требованиям заказчика.</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="page-pros container">
+            <p class="page-pros-title">Плюсы работы с нами</p>
+            <div class="page-pros-item">
+                <svg class="svg-calendar" width="30" height="34">
+                    <use href="#calendar"/>
+                </svg>
+                <p class="pros-item-header">Опыт более 12 лет</p>
+                <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
+            </div>
+            <div class="page-pros-item">
+                <svg class="svg-qualification"  width="40" height="28">
+                    <use href="#qualification"/>
+                </svg>
+                <p class="pros-item-header">Квалификация сотрудников</p>
+                <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
+            </div>
+            <div class="page-pros-item">
+                <svg class="svg-transparency" width="42" height="30">
+                    <use href="#transparency"/>
+                </svg>
+                <p class="pros-item-header">Максимальная прозрачность</p>
+                <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
+            </div>
+            <div class="page-pros-item">
+                <svg class="svg-calendar" width="30" height="34">
+                    <use href="#calendar"/>
+                </svg>
+                <p class="pros-item-header">Легальное, лицензионное ПО</p>
+                <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
+            </div>
+            <div class="page-pros-item">
+                <svg class="svg-complex" width="38" height="40">
+                    <use href="#complex"/>
+                </svg>
+                <p class="pros-item-header">Индивидуальный подход</p>
+                <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
+            </div>
+        </div>
 
     </section>
-
 </main>
 
 @@include('html/home/prefooter.html',{})
