--- a/src/html/all-pages/dropdown.html
+++ b/src/html/all-pages/dropdown.html
@@ -33,7 +33,7 @@
             <a href="/amocrm.html">
                 <li class="dropdown-submenu-item">amoCRM</li>
             </a>
-            <a href="">
+            <a href="/analysis.html">
                 <li class="dropdown-submenu-item">Анализ и оптимизация бизнесс-процессов</li>
             </a>
             <a href="">
